--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,19 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="my_gray700">#666666</color>
+    <color name="my_black">#171717</color>
+    <color name="my_blue">#000DAE</color>
+    <color name="my_white">#F5F8FA</color>
+    <color name="my_dark_blue">#000759</color>
+    <color name="my_blue_gray200">#97AABD</color>
+    <color name="my_light_red">#FF9999</color>
+    <color name="my_card_background">#FAFDFF</color>
+    <color name="my_search_and_icons">#FAFBFC</color>
+    <color name="my_line">#E9EAEC</color>
+    <color name="my_blue100">#B8D9FA</color>
+    <color name="my_red">#FF0000</color>
+    <color name="my_gray500">#969899</color>
+    <color name="my_orange_yellow">#F8BA00</color>
 </resources>
