--- a/app/src/main/res/layout/fragment_account_options.xml
+++ b/app/src/main/res/layout/fragment_account_options.xml
@@ -69,7 +69,7 @@
             android:text="@string/register_account" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/buttonRegisterAccount"
+            android:id="@+id/buttonLoginAccount"
             android:layout_width="@dimen/mediumButtonWidth"
             android:layout_height="@dimen/mediumButtonHeight"
             style="@style/whiteButtonStyle"
