--- a/app/src/main/res/layout/fragment_introduction.xml
+++ b/app/src/main/res/layout/fragment_introduction.xml
@@ -49,7 +49,7 @@
         android:textSize="35sp"/>
 
     <TextView
-        android:id="@+id/tvHaveAccount"
+        android:id="@+id/tvNotHaveAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/h2"
@@ -75,9 +75,9 @@
         android:layout_width="@dimen/smallButtonWidth"
         android:layout_height="@dimen/smallButtonHeight"
         style="@style/blueButtonStyle"
-        app:layout_constraintTop_toBottomOf="@id/tvHaveAccount"
-        app:layout_constraintStart_toStartOf="@+id/tvHaveAccount"
-        app:layout_constraintEnd_toEndOf="@+id/tvHaveAccount"
+        app:layout_constraintTop_toBottomOf="@id/tvNotHaveAccount"
+        app:layout_constraintStart_toStartOf="@+id/tvNotHaveAccount"
+        app:layout_constraintEnd_toEndOf="@+id/tvNotHaveAccount"
         app:layout_constraintBottom_toBottomOf="parent"
         android:text="@string/button_start" />
 
