--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,7 +47,14 @@
         <item name="android:windowIsFloating">false</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowSoftInputMode">adjustResize</item>
+    </style>
 
+    <style name="tabLayout_text" parent="TextAppearance.AppCompat">
+<!--        <item name="android:textColor">@color/black</item>-->
+        <item name="color">@color/black</item>
+        <item name="fontFamily">@font/sf_pro_display</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <dimen name="h4TextSize">35sp</dimen>
