--- a/app/src/main/res/layout/rv_item_special.xml
+++ b/app/src/main/res/layout/rv_item_special.xml
@@ -14,7 +14,7 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/img_ad"
+            android:id="@+id/image_rv_item"
             android:layout_width="90dp"
             android:layout_height="90dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -24,12 +24,13 @@
              />
 
         <TextView
-            android:id="@+id/tv_ad_name"
+            android:id="@+id/tvItemName"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:text="Премиум мебель"
-            app:layout_constraintStart_toEndOf="@id/img_ad"
-            app:layout_constraintTop_toTopOf="@id/img_ad"
+            android:maxLines="2"
+            app:layout_constraintStart_toEndOf="@id/image_rv_item"
+            app:layout_constraintTop_toTopOf="@id/image_rv_item"
             android:layout_marginTop="7dp"
             android:layout_marginStart="18dp"
             android:fontFamily="@font/poppins_thin"
@@ -38,18 +39,18 @@
             android:textSize="17sp"/>
 
         <TextView
-            android:id="@+id/tv_ad_price"
+            android:id="@+id/tvItemPrice"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:text="$600"
-            app:layout_constraintStart_toStartOf="@id/tv_ad_name"
-            app:layout_constraintTop_toBottomOf="@id/tv_ad_name"
+            app:layout_constraintStart_toStartOf="@id/tvItemName"
+            app:layout_constraintTop_toBottomOf="@id/tvItemName"
             android:textColor="@color/black"
             android:textSize="12sp"
             android:fontFamily="@font/sf_pro_display"/>
 
         <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
-            android:id="@+id/btn_add_to_cart"
+            android:id="@+id/buttonItem"
             android:layout_width="77dp"
             android:layout_height="25dp"
             android:background="@drawable/blue_background"
@@ -59,7 +60,7 @@
             android:textSize="10sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_ad_price"
+            app:layout_constraintTop_toBottomOf="@id/tvItemPrice"
             android:layout_marginTop="10dp"
             android:textAllCaps="false"
             />
