--- a/app/src/main/res/layout/rv_item_best_deals.xml
+++ b/app/src/main/res/layout/rv_item_best_deals.xml
@@ -12,7 +12,7 @@
         android:layout_height="88dp">
 
         <ImageView
-            android:id="@+id/img_best_deal"
+            android:id="@+id/imageRvItem"
             android:layout_width="64dp"
             android:layout_height="64dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -21,12 +21,12 @@
             android:layout_marginTop="10dp" />
 
         <TextView
-            android:id="@+id/tv_deal_product_name"
+            android:id="@+id/tvItemName"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:text="Премиум мебель"
-            app:layout_constraintStart_toEndOf="@id/img_best_deal"
-            app:layout_constraintTop_toTopOf="@id/img_best_deal"
+            app:layout_constraintStart_toEndOf="@id/imageRvItem"
+            app:layout_constraintTop_toTopOf="@id/imageRvItem"
             android:layout_marginTop="10dp"
             android:layout_marginStart="10dp"
             android:fontFamily="@font/poppins_light"
@@ -35,12 +35,12 @@
             android:textSize="9sp"/>
 
         <TextView
-            android:id="@+id/tv_old_price"
+            android:id="@+id/tvItemPriceOld"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="$2000"
-            app:layout_constraintTop_toBottomOf="@id/tv_deal_product_name"
-            app:layout_constraintStart_toEndOf="@id/tv_new_price"
+            app:layout_constraintTop_toBottomOf="@id/tvItemName"
+            app:layout_constraintStart_toEndOf="@id/tvItemPrice"
             android:textColor="@color/my_gray700"
             android:textSize="12sp"
             android:fontFamily="@font/sf_pro_display"
@@ -48,12 +48,12 @@
             />
 
         <TextView
-            android:id="@+id/tv_new_price"
+            android:id="@+id/tvItemPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="$1600"
-            app:layout_constraintStart_toStartOf="@id/tv_deal_product_name"
-            app:layout_constraintTop_toBottomOf="@id/tv_deal_product_name"
+            app:layout_constraintStart_toStartOf="@id/tvItemName"
+            app:layout_constraintTop_toBottomOf="@id/tvItemName"
 
             android:textColor="@color/black"
             android:textSize="12sp"
@@ -69,8 +69,8 @@
             android:textColor="@color/white"
             android:textSize="10dp"
             android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@id/tv_deal_product_name"
-            app:layout_constraintTop_toTopOf="@id/tv_deal_product_name"
+            app:layout_constraintStart_toEndOf="@id/tvItemName"
+            app:layout_constraintTop_toTopOf="@id/tvItemName"
             android:textAllCaps="false"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginStart="20dp"
