--- a/app/src/main/res/layout/rv_item_product.xml
+++ b/app/src/main/res/layout/rv_item_product.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/img_product"
+            android:id="@+id/imageRvItem"
             android:layout_width="114dp"
             android:layout_height="108dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -27,12 +27,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="horizontal"
-            app:layout_constraintStart_toStartOf="@id/img_product"
-            app:layout_constraintTop_toBottomOf="@id/img_product"
-            app:layout_constraintEnd_toEndOf="@id/img_product">
+            app:layout_constraintStart_toStartOf="@id/imageRvItem"
+            app:layout_constraintTop_toBottomOf="@id/imageRvItem"
+            app:layout_constraintEnd_toEndOf="@id/imageRvItem">
 
             <TextView
-                android:id="@+id/tv_name"
+                android:id="@+id/tvItemName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins_light"
@@ -55,22 +55,22 @@
 
 
         <TextView
-            android:id="@+id/tv_new_price"
+            android:id="@+id/tvItemPriceNew"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
             android:layout_marginBottom="15dp"
             android:fontFamily="@font/sf_pro_display"
-            android:text="$600"
+            android:text="$6000"
             android:textColor="@color/black"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/tv_price"
+            app:layout_constraintStart_toEndOf="@id/tvItemPrice"
             app:layout_constraintTop_toBottomOf="@id/linear_product_name"
             android:layout_marginStart="10dp"/>
 
         <TextView
-            android:id="@+id/tv_price"
+            android:id="@+id/tvItemPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
@@ -80,7 +80,7 @@
             android:textColor="@color/black"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@id/img_product"
+            app:layout_constraintStart_toStartOf="@id/imageRvItem"
             app:layout_constraintTop_toBottomOf="@id/linear_product_name" />
 
 
