--- a/app/src/main/res/layout/rv_item_bottom.xml
+++ b/app/src/main/res/layout/rv_item_bottom.xml
@@ -3,10 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/my_card_background"
-    app:elevation="0dp"
 
-    >
+    android:padding="10dp"
+    app:elevation="0dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -16,10 +15,10 @@
             android:id="@+id/imageRvItem"
             android:layout_width="114dp"
             android:layout_height="108dp"
+            android:scaleType="fitCenter"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:scaleType="fitCenter"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
             android:id="@+id/linear_product_name"
@@ -27,20 +26,20 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="@id/imageRvItem"
             app:layout_constraintStart_toStartOf="@id/imageRvItem"
-            app:layout_constraintTop_toBottomOf="@id/imageRvItem"
-            app:layout_constraintEnd_toEndOf="@id/imageRvItem">
+            app:layout_constraintTop_toBottomOf="@id/imageRvItem">
 
             <TextView
                 android:id="@+id/tvItemName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:fontFamily="@font/poppins_light"
                 android:text="Стул"
                 android:textColor="@color/black"
                 android:textSize="14sp"
-                android:textStyle="bold"
-                android:layout_weight="1"/>
+                android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/img_favorite"
@@ -58,6 +57,7 @@
             android:id="@+id/tvItemPriceNew"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="3dp"
             android:layout_marginBottom="15dp"
             android:fontFamily="@font/sf_pro_display"
@@ -66,8 +66,7 @@
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/tvItemPrice"
-            app:layout_constraintTop_toBottomOf="@id/linear_product_name"
-            android:layout_marginStart="10dp"/>
+            app:layout_constraintTop_toBottomOf="@id/linear_product_name" />
 
         <TextView
             android:id="@+id/tvItemPrice"
