--- a/app/src/main/res/navigation/login_register_graf.xml
+++ b/app/src/main/res/navigation/login_register_graf.xml
@@ -36,9 +36,6 @@
             android:id="@+id/action_registerFragment_to_loginFragment"
             app:destination="@id/loginFragment"
             app:enterAnim="@anim/from_bottom"
-            app:exitAnim="@anim/from_left"
-            app:popEnterAnim="@anim/from_left"
-            app:popExitAnim="@anim/to_right"
             app:popUpTo="@id/accountOptionsFragment" />
     </fragment>
     <fragment
@@ -49,15 +46,15 @@
         <action
             android:id="@+id/action_accountOptionsFragment_to_registerFragment"
             app:destination="@id/registerFragment"
-            app:enterAnim="@anim/from_right"
-            app:exitAnim="@anim/from_left"
+            app:enterAnim="@anim/from_bottom"
+            app:exitAnim="@anim/to_left"
             app:popEnterAnim="@anim/from_left"
-            app:popExitAnim="@anim/to_right" />
+            app:popExitAnim="@anim/to_bottom" />
         <action
             android:id="@+id/action_accountOptionsFragment_to_loginFragment"
             app:destination="@id/loginFragment"
             app:enterAnim="@anim/from_right"
-            app:exitAnim="@anim/from_left"
+            app:exitAnim="@anim/to_left"
             app:popEnterAnim="@anim/from_left"
             app:popExitAnim="@anim/to_right" />
     </fragment>
