--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="my_red">#FF0000</color>
     <color name="my_gray500">#969899</color>
     <color name="my_orange_yellow">#F8BA00</color>
+    <color name="my_green">#11FF06</color>
 </resources>
